Initial commit at exam server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/exam
 #spring.datasource.url=jdbc:mysql://localhost:3306/exam?serverTimeZone=UTC
 spring.datasource.username=root
-spring.datasource.password=Welcome2ggk
+spring.datasource.password=Hyderabad007
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
